week2/bison.yaml
# bison-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bison
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bison
  template:
    metadata:
      labels:
        app: bison
    spec:
      containers:
      - name: bison
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html
        configMap:
          name: bison-html
---
apiVersion: v1
kind: Service
metadata:
  name: bison-service
spec:
  selector:
    app: bison
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
