week2/brightspace.yaml
# brightspace-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brightspace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: brightspace
  template:
    metadata:
      labels:
        app: brightspace
    spec:
      containers:
      - name: brightspace
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html
        configMap:
          name: brightspace-html
---
apiVersion: v1
kind: Service
metadata:
  name: brightspace-service
spec:
  selector:
    app: brightspace
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
