week2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myfirst-service
spec:
  type: LoadBalancer
  selector:
    app: my-container
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080  # tussen 30000-32767
